@startuml

title __FACTORY's Class Diagram__\n

  namespace academy.mindswap.game {
    namespace .factory {
      abstract class academy.mindswap.games.factory.Game {
          + Game()
          + removeFromServerList()
      }
    }
  }
  

  namespace academy.mindswap.game {
    namespace .factory {
      interface academy.mindswap.games.factory.GameController {
          {abstract} + acceptPlayer()
          {abstract} + isAcceptingPlayers()
          {abstract} + removeFromServerList()
      }
    }
  }
  

  namespace academy.mindswap.game {
    namespace .factory {
      enum GameType {
        BINGO
        QUIZ
        WHEEL_OF_FORTUNE
        description
      }
    }
  }
  

  namespace academy.mindswap.game {
    namespace .factory {
      class academy.mindswap.games.factory.GamesFactory {
          {static} + create()
      }
    }
  }
  

  academy.mindswap.games.factory.Game .up.|> academy.mindswap.games.factory.GameController
  academy.mindswap.games.factory.Game o-- academy.mindswap.games.factory.GameType : gameType
  academy.mindswap.games.factory.Game o-- academy.mindswap.server.Server : server


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
